# calmTechRSS

./: .env.example  .gitignore  README.md  plan.md  pyproject.toml  requirements.txt
.github/workflows/: daily.yml
calmtechrss/: api_config.py  cli.py  cluster.py  config.py  db.py  env.py  export.py  fetcher.py  llm.py  models.py  pipeline.py  render.py  rss.py  text.py
calmtechrss/templates/: issue.html.j2
config/: api.example.yml  api.yml  sources.yml
tests/: test_core.py
